--- a/test.ini
+++ b/test.ini
@@ -4,10 +4,14 @@ host = 0.0.0.0
 port = 5000
 
 [app:main]
-use = config:./ckan/test-core.ini
+use = config:/usr/lib/ckan/default/src/ckan/test-core.ini
+#use = config:./ckan/test-core.ini
 
 ckan.plugins = wirecloud_view
 
 ## Site Settings
 
 ckan.site_url = http://127.0.0.1:5000/
+sqlalchemy.url = postgresql://ckan_default:1234@127.0.0.1:5432/ckan_test
+ckan.datastore.write_url = postgresql://ckan_default:1234@127.0.0.1:5432/datastore_test
+ckan.datastore.read_url = postgresql://datastore_default:1234@127.0.0.1:5432/datastore_test
