process_dashboardid in dataset schema

--- a/test.ini
+++ b/test.ini
@@ -11,5 +11,5 @@ ckan.plugins = wirecloud_view
 
 ## Site Settings
 #
-#ckan.site_url = http://127.0.0.1:5000/
+ckan.site_url = http://127.0.0.1:5000/
 #sqlalchemy.url = postgresql://ckan_default:pass@127.0.0.1:5432/ckan_test
